# ClientServerChat

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp
client/src/: TCPClient.cpp  TCPClient.hpp  main.cpp
server/: CMakeLists.txt  main.cpp
server/src/: TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  main.cpp
